@@ -66,7 +66,9 @@ public:
     reg24 accumulator[3];
     reg24 shift_register[3];
     reg16 rate_counter[3];
+    reg16 rate_counter_period[3];
     reg16 exponential_counter[3];
+    reg16 exponential_counter_period[3];
     reg8 envelope_counter[3];
     EnvelopeGenerator::State envelope_state[3];
     bool hold_zero[3];
